out/llince/templates/deployment.yaml
---
# Source: llince/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: generatebackend-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: generatebackend-v1

  template:
    metadata:
      labels:
        app: generatebackend-v1
      annotations:
        app.kubernetes.io/name: generatebackend-v1
        app.kubernetes.io/instance: generatebackend-v1
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: generatebackend-v1-services

    spec:
      hostAliases:
      - ip: "192.168.0.38"
        hostnames:
          - "db.oracle.lince.com"
          - "db.sqlserver.lince.com"
          - "db.mysql.lince.com"
          - "db.mariadb.lince.com"
          - "db.postgresql.lince.com"
          - "test.lince.com"
      - ip: "192.168.0.7"
        hostnames:
          - "jenkins.lince.com"
      volumes:
        - name: generateservice-mvn
          persistentVolumeClaim:
            claimName: "generateservice-mvn"
        - name: compile-ram
          emptyDir:
            medium: Memory
            sizeLimit: 2Gi

      containers:
        - name: app-container-generatebackend-v1
          image: "registry.llince.com/generate-service-backend:5"
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: "8080"
          volumeMounts:
            - name: generateservice-mvn
              mountPath: "/app/.m2"
            - name: compile-ram
              mountPath: "/app/compile"

          resources:
            limits:
              cpu: 1500m
              memory: 2Gi
            requests:
              cpu: 150m
              memory: 1Gi
