out/llince/templates/ingress.yaml
---
# Source: llince/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: generatebackend-v1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "genericservice.com"
      http:
        paths:
          - path: "/(.*)"
            pathType: Prefix
            backend:
              service:
                name: generatebackend-v1
                port:
                  number: 80
